--- a/client/src/fsd-structure/widgets/DeviceList/ui/DeviceList/deviceList.module.scss
+++ b/client/src/fsd-structure/widgets/DeviceList/ui/DeviceList/deviceList.module.scss
@@ -12,7 +12,7 @@
         overflow: hidden;
         display: flex;
         flex-direction: column;
-        padding: 8px;
+        padding: 8px 8px 8px 4px;
         height: 100%;
         border-right: 2px solid #ffffff;
         box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
@@ -23,7 +23,7 @@
 
         .deviceListInnerWrapper {
             overflow-y: auto;
-            margin-left: 8px;
+            padding: 0 8px;
             height: 100%;
 
         }
