--- a/client/src/fsd-structure/widgets/DeviceList/ui/DeviceListItem/deviceListItem.module.scss
+++ b/client/src/fsd-structure/widgets/DeviceList/ui/DeviceListItem/deviceListItem.module.scss
@@ -1,22 +1,50 @@
 .listItem {
-    margin-top: 8px;
+    padding: 3px 4px 3px 8px;
     text-overflow: ellipsis;
+    border-radius: 8px;
+    transition: 0.2s;
+
+    &:hover {
+        @media (hover: hover) and (pointer: fine) {
+            background-color: rgba(255, 255, 255, 0.27);
+            transform: scale(1.05);
+        }
+    }
 
     &Button {
         overflow: hidden;
         display: flex;
+        justify-content: space-between;
+        align-items: center;
         max-height: 48px;
+        width: 100%;
         text-overflow: ellipsis;
         color: #fff;
 
-        .itemName {
-            max-height: 100%;
-            padding-left: 8px;
-            text-align: left;
-            display: -webkit-box;
-            -webkit-line-clamp: 3;
-            -webkit-box-orient: vertical;
-            overflow: hidden;
+        .textWrapper {
+            display: flex;
+            align-items: center;
+            pointer-events: none;
+
+            .itemName {
+                max-height: 100%;
+                padding-left: 8px;
+                text-align: left;
+                display: -webkit-box;
+                -webkit-line-clamp: 3;
+                -webkit-box-orient: vertical;
+                overflow: hidden;
+            }
+
+            .deleteButton{}
+
+        }
+
+        &:hover {
+            .deleteButton {
+                opacity: 1;
+                pointer-events: auto;
+            }
         }
 
     }
