--- a/client/src/fsd-structure/widgets/InformationView/ui/InformationView/informationView.module.scss
+++ b/client/src/fsd-structure/widgets/InformationView/ui/InformationView/informationView.module.scss
@@ -8,6 +8,7 @@
 }
 
 .informationView {
+    position: relative;
     overflow: hidden;
     padding: 20px;
     width: 80%;
@@ -16,6 +17,13 @@
     border: 4px solid #acebf8;
     border-radius: 16px;
     box-shadow: 0px 4px 28px 0px rgba(255, 255, 255, 0.45);
+
+    .playerIsNotChosenNotification {
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+    }
 
     &Form {
         display: flex;
@@ -40,16 +48,6 @@
     .submitFormButtonWrapper {
         margin-top: 32px;
         .submitFormButton {
-            padding: 4px 11px;
-            width: 200px;
-            height: 52px;
-            color: #ffffff;
-            font-size: 18px;
-            border-radius: 30px;
-            background: linear-gradient(90deg, #e23482 3.26%,#7a27f1 98.07%);
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.45);
-            transition: 0.3s;
-
             &:hover {
                 @media (hover: hover) and (pointer: fine) {
                     scale: 1.05;
