--- a/client/src/fsd-structure/widgets/InformationView/ui/MainInformation/contentBlock.module.scss
+++ b/client/src/fsd-structure/widgets/InformationView/ui/MainInformation/contentBlock.module.scss
@@ -1,7 +1,7 @@
 .mainInformation {
     margin-top: 4px;
     width: 100%;
-    height: 180px;
+    min-height: 180px;
     &Row {
         display: flex;
         margin-top: 12px;
